# AgentBuilder

./: .env.example  .gitignore  README.md  docker-compose.yml  logs.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d8d1352b2a1f_baseline_m0_empty.py  m1_001_knowledge_base_and_documents.py  m2_001_mcp_servers.py  m2_002_mcp_transport_add_streamable_http.py  m2_003_mcp_transport_add_stdio.py  m2_004_mcp_oauth.py  m2_005_mcp_oauth_resource.py  m3_001_workflows.py  m3_002_app_settings.py  m4_001_workflow_runs_and_events.py  m6_001_publishing.py  m7_001_hook_executions.py  m7_002_instruction_generator_settings.py  m8_001_merge_oauth_and_instruction_generator.py  m9_001_update_instruction_generator_default_model.py
backend/app/: main.py
backend/app/api/: apps.py  health.py  knowledge.py  mcp.py  prompts.py  providers.py  runs.py  serving.py  settings.py  workflow.py
backend/app/core/: config.py  db.py  errors.py  request_id.py
backend/app/hooks/: __init__.py  kb_citation_verifier.py  llm_verifier.py  protocol.py  registry.py  runner.py  tool_usage_checker.py
backend/app/models/: __init__.py  app.py  base.py  conversation.py  hook.py  knowledge.py  mcp.py  run.py  settings.py  workflow.py
backend/app/nodes/: __init__.py  agent.py  chat_input.py  chat_output.py  input_guardrail.py  knowledge_base.py  llm.py  output_guardrail.py  prompt_template.py  registry.py  utils.py
backend/app/repositories/: app.py  conversation.py  knowledge.py  mcp.py  run.py  settings.py  workflow.py
backend/app/schemas/: app.py  knowledge.py  mcp.py  run.py  serving.py  settings.py  workflow.py
backend/app/seed/: demo_workflows.py
backend/app/services/guardrail/: heuristic.py  llm_judge.py  models.py
backend/app/services/knowledge/: bootstrap.py  chunker.py  ingestion.py  orchestrator.py  progress.py  qdrant.py
backend/app/services/mcp/: adapters.py  discovery.py  oauth.py  oauth_state.py
backend/tests/: conftest.py  test_chunker.py  test_compiler.py  test_config.py  test_db.py  test_embedding_registry.py  test_errors.py  test_fastembed_provider.py  test_file_upload.py  test_health.py  test_ingestion_pipeline.py  test_knowledge_crud.py  test_knowledge_repository.py  test_local_hf_provider.py  test_local_hf_smoke.py  test_mcp_adapters.py  test_mcp_api.py  test_mcp_repository.py  test_models_knowledge.py  test_models_mcp.py  test_node_registry.py  test_parser_docx.py  test_parser_misc.py  test_parser_office.py  test_parser_pdf.py  test_parser_registry.py  test_parser_text.py  test_progress.py  test_qdrant_wrapper.py  test_request_id.py  test_runtime.py  test_validator.py
backend/tests/fixtures/: sample.csv  sample.md  sample.txt
(+123 files in other folders)
