[project]
name = "agentbuilder-backend"
version = "0.0.1"
description = "AgentBuilder backend — FastAPI + LangGraph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "python-multipart>=0.0.18,<0.1",
    "httpx>=0.28,<0.29",
    # M1 — knowledge base / RAG
    "qdrant-client>=1.12,<2.0",
    "langchain-core>=0.3,<0.4",
    "langchain-text-splitters>=0.3,<0.4",
    "langchain-huggingface>=0.1.2,<0.2",
    "sentence-transformers>=3.3,<4.0",
    "fastembed>=0.5,<1.0",
    "pypdf>=5.1,<6.0",
    "python-docx>=1.1,<2.0",
    "python-pptx>=1.0,<2.0",
    "openpyxl>=3.1,<4.0",
    "ebooklib>=0.18,<0.19",
    "beautifulsoup4>=4.12,<5.0",
    "sse-starlette>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<0.26",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.8,<0.9",
    "aiosqlite>=0.20,<0.21",
    "reportlab>=4.2,<5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires a local HF model mount + (optional) GPU; skipped otherwise",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
